--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -2,4 +2,17 @@
 
 @tailwind components;
 
+@import "grid.less";
+@import "card.less";
+@import "form.less";
+@import "spinner";
+
+
+.sortable-list-item.draggable-source--is-dragging {
+  background-color: #f1f5f8;
+}
+.sortable-list-item.draggable-source--is-dragging > * {
+  opacity: 0;
+}
+
 @tailwind utilities;
