--- a/resources/less/form.less
+++ b/resources/less/form.less
@@ -1,9 +1,9 @@
 .form {
 }
 .form-search-bar {
-@apply .rounded .border .bg-grey-lighter;
+@apply .rounded .border .bg-grey-lightest;
   input {
-  @apply .appearance-none .block .w-full .bg-grey-lighter .text-grey-darker .rounded .py-3 .px-4;
+  @apply .appearance-none .block .w-full .bg-grey-lightest .text-grey-darker .rounded .py-3 .px-4;
   }
 }
 .form-error {
@@ -15,7 +15,7 @@
 }
 
 .form-select {
-  @apply .appearance-none .block .w-full .bg-grey-lighter .text-grey-darker .rounded .py-3 .px-4 .border .shadow;
+  @apply .appearance-none .block .w-full .bg-grey-lightest .text-grey-darker .rounded .py-3 .px-4 .border .shadow;
 
   option {
     @apply .py-4 px-1;
@@ -23,14 +23,14 @@
 }
 
 .form-input {
-  @apply .appearance-none .block .w-full .bg-grey-lighter .text-grey-darker .rounded .py-3 .px-4 .border .shadow;
+  @apply .appearance-none .block .w-full .bg-grey-lightest .text-grey-darker .rounded .py-3 .px-4 .border .shadow;
 }
 
 .form-checkbox {
 @apply .inline-flex .items-center .cursor-pointer .relative;
 
   input[type=checkbox] {
-    @apply .appearance-none .bg-grey-lighter .w-6 .h-6 .inline-block .cursor-pointer .border .rounded;
+    @apply .appearance-none .bg-grey-lightest .w-6 .h-6 .inline-block .cursor-pointer .border .rounded;
 
     &:disabled {
     }
