--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -6,6 +6,7 @@
 @import "card.less";
 @import "form.less";
 @import "spinner";
+@import "page.less";
 
 
 .sortable-list-item.draggable-source--is-dragging {
