--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -7,6 +7,7 @@
 @import "form.less";
 @import "spinner";
 @import "page.less";
+@import "flash.less";
 
 
 .sortable-list-item.draggable-source--is-dragging {
