--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -8,6 +8,7 @@
 @import "spinner";
 @import "page.less";
 @import "flash.less";
+@import "color-picker.less";
 
 
 .sortable-list-item.draggable-source--is-dragging {
