added checkbox field

--- a/resources/less/form.less
+++ b/resources/less/form.less
@@ -39,7 +39,8 @@
     @apply .bg-blue;
 
       &::before {
-      @apply .absolute .ml-2 .text-white text-lg;
+      @apply .absolute .text-white text-lg;
+        margin-left: .4rem;
         content: '\02143';
         transform: rotate(40deg);
       }
