--- a/resources/less/app.less
+++ b/resources/less/app.less
@@ -9,6 +9,7 @@
 @import "page.less";
 @import "flash.less";
 @import "color-picker.less";
+@import "tooltip.less";
 
 
 .sortable-list-item.draggable-source--is-dragging {
