--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8534,6 +8534,29 @@ table {
           transform: rotate(270deg);
 }
 
+.nav-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: .5rem;
+  padding-bottom: .5rem;
+  text-decoration: none;
+  font-size: 1.125rem;
+  color: #606f7b;
+}
+
+.nav-link:hover {
+  color: #3490dc;
+}
+
+.nav-link.nav-link\:active {
+  color: #3490dc !important;
+}
+
+.nav-link.nav-link\:active .nav-link-icon {
+  color: #3490dc;
+}
+
 @media (min-width: 576px) {
   .sm\:list-reset {
     list-style: none;
